--- a/src/TimeReporting/Pages/Reports/Create.cshtml
+++ b/src/TimeReporting/Pages/Reports/Create.cshtml
@@ -4,10 +4,11 @@
   Layout = "_Layout";
 }
 
-<form method="post" up-target="main" class="add-entry-form">
+<section>
   <h1>New time entry</h1>
   <hr>
-  <label asp-for="NewEntry.ProjectId" class="form-label">Project</label>
+  <form method="post" up-target="main" class="add-entry-form">
+    <label asp-for="NewEntry.ProjectId" class="form-label">Project</label>
     <div class="mb-3 input-group">
       <select asp-for="NewEntry.ProjectId" class="form-select project-selection">
         <option value="">Select a Project</option>
@@ -17,32 +18,31 @@
         }
       </select>
       <a
+        class="btn btn-outline-secondary rounded-end"
         href="/Projects/Create"
         up-layer="new modal"
         up-history="auto"
         up-accept-location="/Projects"
         up-on-accepted="up.reload('.project-selection')">
-        <button class="btn btn-primary rounded-right" type="button">
-          New
-        </button>
+        New
       </a>
       <span class="text-danger" asp-validation-for="NewEntry.ProjectId"></span>
     </div>
-  <div class="mb-3">
-    <label asp-for="NewEntry.Hours" class="form-label">Hours</label>
-    <input type="number" min="0" step="0.5" asp-for="NewEntry.Hours" class="form-control"/>
-    <span class="text-danger" asp-validation-for="NewEntry.Hours"></span>
-  </div>
-  <div class="mb-3">
-    <label asp-for="NewEntry.WorkTypeId" class="form-label">Work type</label>
-    <select asp-for="NewEntry.WorkTypeId" class="form-select work-type-selection">
-      <option value="">Select a work type</option>
-      @foreach (var workType in Model.WorkTypes)
-      {
-        <option value="@workType.Id">@workType.Name</option>
-      }
-    </select>
-  </div>
+    <div class="mb-3">
+      <label asp-for="NewEntry.Hours" class="form-label">Hours</label>
+      <input type="number" min="0" step="0.5" asp-for="NewEntry.Hours" class="form-control"/>
+      <span class="text-danger" asp-validation-for="NewEntry.Hours"></span>
+    </div>
+    <div class="mb-3">
+      <label asp-for="NewEntry.WorkTypeId" class="form-label">Work type</label>
+      <select asp-for="NewEntry.WorkTypeId" class="form-select work-type-selection">
+        <option value="">Select a work type</option>
+        @foreach (var workType in Model.WorkTypes)
+        {
+          <option value="@workType.Id">@workType.Name</option>
+        }
+      </select>
+    </div>
     <div class="mb-3">
       <label asp-for="NewEntry.Description" class="form-label">Description</label>
       <textarea asp-for="NewEntry.Description" class="form-control"></textarea>
@@ -53,5 +53,6 @@
       <input asp-for="NewEntry.Date" class="form-control"/>
       <span class="text-danger" asp-validation-for="NewEntry.Date"></span>
     </div>
-  <button type="submit" class="btn btn-success">Save</button>
-</form>
+    <button type="submit" class="btn btn-success">Save</button>
+  </form>
+</section>
