--- a/src/TimeReporting/Pages/WorkTypes/Create.cshtml
+++ b/src/TimeReporting/Pages/WorkTypes/Create.cshtml
@@ -1,50 +1,22 @@
 @page
 @model TimeReporting.Pages.WorkTypes.CreateModel
 
-        @{
-        Layout = null;
-        }
-        
-        <!DOCTYPE html>
-        
-        <html>
-        <head>
-        <meta name="viewport" content="width=device-width" />
-        <title>Create</title>
-        </head>
-        <body>
-        
-    <h4>WorkType</h4>
-    <hr />
-    <div class="row">
-    <div class="col-md-4">
-    <form method="post">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="WorkType.Id" class="control-label"></label>
-                <input asp-for="WorkType.Id" class="form-control" />
-                <span asp-validation-for="WorkType.Id" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="WorkType.Name" class="control-label"></label>
-                <input asp-for="WorkType.Name" class="form-control" />
-                <span asp-validation-for="WorkType.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="WorkType.HourlyRate" class="control-label"></label>
-                <input asp-for="WorkType.HourlyRate" class="form-control" />
-                <span asp-validation-for="WorkType.HourlyRate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+<section>
+  <h2>Add new work type</h2>
+  <hr />
+  <form method="post" up-target="main">
+    <div class="form-group mb-3">
+      <label asp-for="WorkType.Name" class="form-label"></label>
+      <input asp-for="WorkType.Name" class="form-control" />
+      <span asp-validation-for="WorkType.Name" class="text-danger"></span>
     </div>
-</div>
-
-<div>
-    <a asp-page="Index">Back to List</a>
-</div>
-
-</body>
-</html>
+    <div class="form-group mb-3">
+      <label asp-for="WorkType.HourlyRate" class="form-label"></label>
+      <input asp-for="WorkType.HourlyRate" class="form-control" />
+      <span asp-validation-for="WorkType.HourlyRate" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+      <input type="submit" value="Create" class="btn btn-primary" />
+    </div>
+  </form>
+</section>
