You can now see the employees view and also see the add employee view, but needs onpost logic

--- a/src/TimeReporting/Pages/Shared/_LoginPartial.cshtml
+++ b/src/TimeReporting/Pages/Shared/_LoginPartial.cshtml
@@ -38,6 +38,14 @@
           <i class="bi bi-people text-primary"></i> Customers
         </a>
       </li>
+      <li class="nav-item fw-bold">
+        <a class="nav-link d-flex align-items-center gap-2"
+           asp-page="/Employees/Index"
+           up-alias="/Employees/*"
+           up-target="main">
+          <i class="bi bi-people text-primary"></i> Employees
+        </a>
+      </li>
     </ul>
   </div>
   <ul class="justify-content-end nav flex-column">
