Got started to implement chart js together with unpoly to show charts

--- a/src/TimeReporting/Pages/Projects/Details.cshtml
+++ b/src/TimeReporting/Pages/Projects/Details.cshtml
@@ -1,4 +1,5 @@
 @page
+@using NuGet.Protocol
 @model TimeReporting.Pages.Projects.DetailsModel
 
 @{
@@ -48,4 +49,6 @@
       </table>
     </div>
   </section>
+  <canvas up-data="@Model.TableData.ToJson()" id="test-chart"></canvas>
 </div>
+
