--- a/src/TimeReporting/Pages/Shared/_RootLayout.cshtml
+++ b/src/TimeReporting/Pages/Shared/_RootLayout.cshtml
@@ -16,6 +16,7 @@
 @RenderBody()
 <div id="toast" up-flashes class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1055;"></div>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
