--- a/src/TimeReporting/Pages/Shared/_RootLayout.cshtml
+++ b/src/TimeReporting/Pages/Shared/_RootLayout.cshtml
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>@ViewData["title"] - Time Reporting</title>
+  <title>@ViewData["Title"]</title>
   <link rel="stylesheet" href="~/lib/unpoly/unpoly.css">
   <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -13,7 +13,7 @@
   <script defer src="~/js/unpoly-scripts.js"></script>
 </head>
 <body id="body">
-@RenderBody()
+    @RenderBody()
 <div id="toast" up-flashes class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1055;"></div>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js"></script>
