--- a/src/TimeReporting/Pages/Shared/_Layout.cshtml
+++ b/src/TimeReporting/Pages/Shared/_Layout.cshtml
@@ -22,12 +22,16 @@
 </header>
 <div class="container-fluid">
   <div class="row">
-    <div
-      class="sidebar z-3 border border-right col-md-3 col-lg-2 p-0 bg-body-tertiary position-fixed bottom-0 top-0 min-vh-100">
-      <div class="offcanvas-md offcanvas-end bg-body-tertiary" tabindex="-1" id="sidebarMenu"
+    <!-- Sidebar -->
+    <div class="sidebar col-md-3 col-lg-2 p-0 bg-body-tertiary min-vh-100">
+      <div class="offcanvas-md offcanvas-end bg-body-tertiary h-100" tabindex="-1" id="sidebarMenu"
         aria-labelledby="sidebarMenuLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="sidebarMenuLabel">Menu</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#sidebarMenu" aria-label="Close"></button>
+        </div>
         <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
-          <nav class="nav d-flex flex-column justify-content-between">
+          <nav class="nav d-flex flex-column justify-content-between h-100">
             @if (SignInManager.IsSignedIn(User))
             {
               <div>
@@ -62,7 +66,7 @@
                   </li>
                 </ul>
               </div>
-              <ul class="mt-auto nav flex-column">
+              <ul class="nav flex-column mb-auto">
                 <hr class="my-3 mx-3">
                 <li class="nav-item fw-bold">
                   <a class="nav-link d-flex align-items-center gap-2" asp-page="/Account/Manage/Index"
@@ -90,7 +94,7 @@
         </div>
       </div>
     </div>
-    <main role="main" class="col-md-9 ms-sm-auto col-lg-10 pt-4" id="main">
+    <main role="main" class="col-md-9 col-lg-10" id="main">
       @RenderBody()
     </main>
   </div>
