Added edit page to worktypes and employees and worked some more on the timer feature

--- a/src/TimeReporting/Pages/Customers/Create.cshtml
+++ b/src/TimeReporting/Pages/Customers/Create.cshtml
@@ -8,17 +8,15 @@
 
 <section>
   <h2>New Customer</h2>
-  <hr/>
+  <hr />
   <form method="post" asp-page="Create" up-target="main">
     <input type="hidden" asp-for="Customer.Id" />
-    <div class="mb-3">
+    <div>
       <label asp-for="Customer.Name" class="form-label"></label>
-      <input asp-for="Customer.Name" class="form-control"/>
+      <input asp-for="Customer.Name" class="form-control" />
       <span asp-validation-for="Customer.Name" class="text-danger"></span>
     </div>
     @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary w-100">Add</button>
   </form>
 </section>
-
-
