--- a/src/TimeReporting/Pages/Reports/Create.cshtml
+++ b/src/TimeReporting/Pages/Reports/Create.cshtml
@@ -4,7 +4,7 @@
   Layout = "_Layout";
 }
 
-<section>
+<section class="container">
   <h1>New time entry</h1>
   <hr>
   <form method="post" up-target="main" class="add-entry-form">
