--- a/src/TimeReporting/Pages/Shared/Components/Timer/Default.cshtml
+++ b/src/TimeReporting/Pages/Shared/Components/Timer/Default.cshtml
@@ -20,7 +20,6 @@
             {
               <strong>@Model.TimerTime.Hours</strong> @(Model.TimerTime.Hours == 1 ? "hour" : "hours")
             }
-
             <strong>@Model.TimerTime.Minutes</strong> @(Model.TimerTime.Minutes == 1 ? "minute" : "minutes")
           </p>
         </div>
@@ -28,7 +27,7 @@
           <div class="clock"></div>
         </div>
       </div>
-      <a asp-page="/Index" asp-page-handler="StopTimer" asp-route-minutes="@Model.TimerTime.Minutes" asp-route-hours="@Model.TimerTime.Hours" up-target="#timer" class="btn btn-danger w-100">
+      <a asp-page="/Index" asp-page-handler="StopTimer" up-target="#timer" class="btn btn-danger w-100">
         <i class="bi bi-stop-circle me-2"></i> Stop Timer
       </a>
     </div>
@@ -44,9 +43,9 @@
         <span><strong>@Model.TimerTime.Minutes</strong> @(Model.TimerTime.Minutes == 1 ? "minute" : "minutes")</span>
       </div>
       <div class="d-flex gap-2">
-        <a href="/Reports/Create?hours=@Model.TimerTime.Hours&minutes=@Model.TimerTime.Minutes"
-          class="btn btn-success flex-grow-1" up-layer="new modal" up-target="main" up-history="false">
-          <i class="bi bi-plus-circle me-2"></i>
+        <a href="/Reports/Create" class="btn btn-success flex-grow-1"
+          up-layer="new modal" up-target="main" up-history="false">
+          <i class="bi bi-plus-circle me-2"></i> Add Time
         </a>
         <a asp-page="/Index" asp-page-handler="DiscardTimer" up-target="#timer" class="btn btn-outline-danger flex-grow-1">
           <i class="bi bi-trash me-2"></i>
