--- a/src/TimeReporting/Pages/WorkTypes/Edit.cshtml
+++ b/src/TimeReporting/Pages/WorkTypes/Edit.cshtml
@@ -2,47 +2,25 @@
 @model TimeReporting.Pages.WorkTypes.EditModel
 
 @{
-    Layout = null;
+    Layout = "_Layout";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
-</head>
-<body>
-
-<h4>WorkType</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="WorkType.Id" />
-            <div class="form-group">
-                
-                <label asp-for="WorkType.Name" class="control-label"></label>
-                <input asp-for="WorkType.Name" class="form-control" />
-                <span asp-validation-for="WorkType.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                
-                <label asp-for="WorkType.HourlyRate" class="control-label"></label>
-                <input asp-for="WorkType.HourlyRate" class="form-control" />
-                <span asp-validation-for="WorkType.HourlyRate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+<section>
+  <h2>Edit work type</h2>
+  <hr />
+  <form method="post" up-target="main">
+    <div class="form-group mb-3">
+      <label asp-for="WorkType.Name" class="form-label"></label>
+      <input asp-for="WorkType.Name" class="form-control" />
+      <span asp-validation-for="WorkType.Name" class="text-danger"></span>
     </div>
-</div>
-
-<div>
-    <a asp-page="./Index">Back to List</a>
-</div>
-
-</body>
-</html>
+    <div class="form-group mb-3">
+      <label asp-for="WorkType.HourlyRate" class="form-label"></label>
+      <input asp-for="WorkType.HourlyRate" class="form-control" />
+      <span asp-validation-for="WorkType.HourlyRate" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+      <input type="submit" value="Save" class="btn btn-primary" />
+    </div>
+  </form>
+</section>
