--- a/src/TimeReporting/Pages/Customers/Create.cshtml
+++ b/src/TimeReporting/Pages/Customers/Create.cshtml
@@ -11,12 +11,12 @@
   <hr />
   <form method="post" asp-page="Create" up-target="main">
     <input type="hidden" asp-for="Customer.Id" />
-    <div>
+    <div class="mb-3">
       <label asp-for="Customer.Name" class="form-label"></label>
       <input asp-for="Customer.Name" class="form-control" />
       <span asp-validation-for="Customer.Name" class="text-danger"></span>
     </div>
     @Html.AntiForgeryToken()
-    <button type="submit" class="btn btn-primary w-100">Add</button>
+    <button type="submit" class="btn btn-primary">Create</button>
   </form>
 </section>
